vendor/feedvalidator/demo/testcases/opml/errors/invalidIsBreakpoint.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  OPML Specification reference:

  Common attributes
  isBreakpoint is a string, either "true" or "false"
-->

<!--
  Description:  The isBreakpoint attribute should be either "true" or "false"
  Expect:       InvalidTrueFalse{element:isBreakpoint}
-->

<opml version="1.1">
	<head>
		<title>Invalid isBreakpoint Attribute</title>
		</head>
	<body>
		<outline text="Outline text" isBreakpoint="maybe"/>
		</body>
	</opml>
